Corrected grid gap, margin & padding

--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,22 @@
 body {
   font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 
 .container {
-  max-width: 1500px;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+section {
+  max-width: 1200px;
   margin: 0 auto;
 }
 
 .grid {
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
-}
-
-section {
-  max-width: 1100px;
-  margin: 0 auto;
+  column-gap: 10px;
 }
 
 header {
@@ -73,7 +75,7 @@ footer {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 40px 0;
+  padding: 20px;
 }
 
 footer h4 {
@@ -86,7 +88,6 @@ footer p {
   font-weight: 400;
   font-size: 16px;
   opacity: 0.7;
-  margin-right: 20px;
   line-height: 24px;
 }
 
@@ -126,10 +127,6 @@ footer a {
     font-size: 12px;
     padding: 12px 24px;
     margin-top: 28px;
-  }
-
-  footer {
-    padding: 40px 20px;
   }
 
   footer h4 {
